[gd_scene load_steps=38 format=3 uid="uid://bolwst7ixtwd3"]

[ext_resource type="Script" uid="uid://dbcmbvf3aoklj" path="res://Markus/Character/player.gd" id="1_mbpc6"]
[ext_resource type="Texture2D" uid="uid://c4wv467t3oall" path="res://asset/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Idle/Idle-Sheet.png" id="5_nyct3"]
[ext_resource type="Texture2D" uid="uid://dj1pjqyleo8pl" path="res://asset/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Jumlp-All/Jump-All-Sheet.png" id="5_vfsap"]
[ext_resource type="Texture2D" uid="uid://cx6u44mukpx8e" path="res://asset/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Run/Run-Sheet.png" id="6_loff1"]
[ext_resource type="Script" uid="uid://bu1ev8m3t862d" path="res://Markus/Character/CharacterStateMachine.gd" id="7_loff1"]
[ext_resource type="Script" uid="uid://bai80v1rsvjeg" path="res://Markus/Character/GroundState.gd" id="8_bjbsp"]
[ext_resource type="Script" uid="uid://b5dawwu36utg5" path="res://Markus/Character/AirState.gd" id="9_vfsap"]
[ext_resource type="Script" uid="uid://cmcsth38e7nj3" path="res://Markus/Character/LandingState.gd" id="10_j17g1"]
[ext_resource type="Script" uid="uid://dov0d6uf6o7d5" path="res://Markus/Character/StateDebugLabel.gd" id="11_j17g1"]

[sub_resource type="LabelSettings" id="LabelSettings_l0e6x"]
font_size = 27

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w8cch"]
radius = 8.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2im5r"]
radius = 44.0

[sub_resource type="LabelSettings" id="LabelSettings_dl7hw"]
line_spacing = 3.56
font_size = 22

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_expi2"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nyct3"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_loff1"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_mif1t"]
blend_point_0/node = SubResource("AnimationNodeAnimation_expi2")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_nyct3")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_loff1")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vfsap"]
animation = &"double_jump"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_l0e6x"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vfsap")
blend_point_0/pos = 0.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j17g1"]
animation = &"jump_end"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_j17g1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j17g1")
blend_point_0/pos = 0.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l0e6x"]
animation = &"jump_start"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_vfsap"]
blend_point_0/node = SubResource("AnimationNodeAnimation_l0e6x")
blend_point_0/pos = 0.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_avqj3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y0et5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qvohc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_48f46"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j17g1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ep2xd"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_c0a6w"]
states/Move/node = SubResource("AnimationNodeBlendSpace1D_mif1t")
states/Move/position = Vector2(420, 100)
states/Start/position = Vector2(197, 100)
states/double_jump/node = SubResource("AnimationNodeBlendSpace1D_l0e6x")
states/double_jump/position = Vector2(653, -49)
states/jump_end/node = SubResource("AnimationNodeBlendSpace1D_j17g1")
states/jump_end/position = Vector2(653, 100)
states/jump_start/node = SubResource("AnimationNodeBlendSpace1D_vfsap")
states/jump_start/position = Vector2(420, -49)
transitions = ["jump_start", "jump_end", SubResource("AnimationNodeStateMachineTransition_avqj3"), "jump_start", "double_jump", SubResource("AnimationNodeStateMachineTransition_y0et5"), "double_jump", "jump_end", SubResource("AnimationNodeStateMachineTransition_qvohc"), "Start", "Move", SubResource("AnimationNodeStateMachineTransition_48f46"), "Move", "jump_start", SubResource("AnimationNodeStateMachineTransition_j17g1"), "jump_end", "Move", SubResource("AnimationNodeStateMachineTransition_ep2xd")]
graph_offset = Vector2(-266, -111)

[sub_resource type="Animation" id="Animation_s54lb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vfsap"]
resource_name = "double_jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_vfsap")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_twt3k"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_nyct3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_l0e6x"]
resource_name = "jump_end"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_vfsap")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_j17g1"]
resource_name = "jump_start"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_vfsap")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_t80y4"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_loff1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dv6xg"]
_data = {
&"RESET": SubResource("Animation_s54lb"),
&"double_jump": SubResource("Animation_vfsap"),
&"idle": SubResource("Animation_twt3k"),
&"jump_end": SubResource("Animation_l0e6x"),
&"jump_start": SubResource("Animation_j17g1"),
&"run": SubResource("Animation_t80y4")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_mbpc6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="UI" type="CanvasLayer" parent="Camera2D"]

[node name="Control" type="Control" parent="Camera2D/UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 550.0
offset_bottom = 500.0

[node name="Coin" type="Label" parent="Camera2D/UI/Control"]
layout_mode = 1
offset_right = 400.0
offset_bottom = 200.0
text = "Coin"
label_settings = SubResource("LabelSettings_l0e6x")
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_w8cch")

[node name="Interaction Components" type="Node2D" parent="."]
z_index = 1

[node name="interactionArea" type="Area2D" parent="Interaction Components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/interactionArea"]
shape = SubResource("CircleShape2D_2im5r")

[node name="Label" type="Label" parent="Interaction Components"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -47.0
offset_right = 358.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.24, 0.24)
text = "test"
label_settings = SubResource("LabelSettings_dl7hw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_c0a6w")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = -0.00156492
parameters/double_jump/blend_position = 0.0
parameters/jump_end/blend_position = 0.0383431
parameters/jump_start/blend_position = -0.0119979

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dv6xg")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
centered = false
offset = Vector2(-32, -40)

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "animation_tree", "character")]
script = ExtResource("7_loff1")
current_state = NodePath("Ground")
animation_tree = NodePath("../AnimationTree")
character = NodePath("..")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state")]
script = ExtResource("8_bjbsp")
air_state = NodePath("../Air")

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("landing_state")]
script = ExtResource("9_vfsap")
landing_state = NodePath("../Landing")

[node name="Landing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("10_j17g1")
landing_animation_name = "jump_end"
ground_state = NodePath("../Ground")

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -50.0
offset_top = -87.0
offset_right = 52.0
offset_bottom = -64.0
text = "State:"
script = ExtResource("11_j17g1")
state_machine = NodePath("../CharacterStateMachine")

[connection signal="area_entered" from="Interaction Components/interactionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Components/interactionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Landing" method="_on_animation_tree_animation_finished"]
